--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
@@ -31,6 +32,8 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-nodemon": "^2.1.0",
     "gulp-util": "^3.0.7",
-    "gulp-webpack": "^1.5.0"
+    "gulp-webpack": "^1.5.0",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-router": "^2.8.1"
   }
 }
