--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-nodemon": "^2.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
     "react-addons-css-transition-group": "^15.3.2",
